changet index.html

--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-	 hello!
+	 hello!World
 
 	<script src = "js/jsmin/main.min.js"></script>
 </body>
