--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,40 @@
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-	 hello!World
+	 <header>
+		<div class="header">
+			<div class="header__logo">
+				 <img class="header__img" src="images/logo.svg" alt="logo">
+			</div>
+
+			<div class="header__menu">
+				<ul class="header__ul">
+					<li class="header__li"><a href="#">Главная</a></li>
+					<li class="header__li"><a href="#">Курсы</a></li>
+					<li class="header__li"><a href="#">Расписание</a></li>
+					<li class="header__li"><a href="#">Преподаватели</a></li>
+					<li class="header__li"><a href="#">Рассылка</a></li>
+					<li class="header__li"><a href="#">Контакты</a></li>
+
+				</ul>
+			</div>
+
+			<div class="header__button"><button>Зайти в кабинет</button></div>
+		</div>
+	 </header>
+
+
+	 <div class="header-main">
+
+		<div class="header-main__heading">
+			<h1 class="header-main__h1">Первый курс по компьютерной сборке</h1>
+		</div>
+		
+		<div class="header-main__counter"></div>
+
+	 </div>
+
+
 
 	<script src = "js/jsmin/main.min.js"></script>
 </body>
